some updates & fixes
- fix bottom footer placement (mostly)
- increase font size and link size
- timeline looks not as squished on mobile

--- a/_css/franklin.css
+++ b/_css/franklin.css
@@ -19,6 +19,10 @@ html {
   color: var(--text-color);
 }
 
+.initial-content, #particles {
+  padding-bottom: -5em;
+}
+
 /* ==================================================================
     BASIC GRID FOR PROFILE PIC
 ================================================================== */
@@ -79,6 +83,7 @@ html {
 
 .franklin-toc {
   margin-left: 0;
+  font-size: 14pt;
 }
 
 .franklin-toc li {
