--- a/_css/minimal-mistakes.css
+++ b/_css/minimal-mistakes.css
@@ -539,6 +539,8 @@ html {
 
 body {
   margin: 0;
+  position: relative;
+  min-height: 100vh;
 }
 
 ::-moz-selection {
@@ -2524,41 +2526,23 @@ th {
 
 .page__footer {
   clear: both;
-  float: bottom;
   margin-left: 0;
   margin-right: 0;
   width: 100%;
+  height: 5em;
   position: absolute;
-  bottom: -20%;
-  height: auto;
-  margin-top: 3em;
+  bottom: -5em;
   color: #898c8f;
-  -webkit-animation: intro 0.3s both;
-  animation: intro 0.3s both;
-  -webkit-animation-delay: 0.45s;
-  animation-delay: 0.45s;
   background-color: #f2f3f3;
 }
 
-.page__footer::after {
-  clear: both;
-  content: "";
-  display: table;
-}
-
 .page__footer footer {
-  clear: both;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 2em;
   max-width: 100%;
-  padding: 0 1em 2em;
-}
-
-.page__footer footer::after {
-  clear: both;
-  content: "";
-  display: table;
 }
 
 @media (min-width: 80em) {
@@ -2576,45 +2560,13 @@ th {
   text-decoration: underline;
 }
 
-.page__footer .fas,
-.page__footer .fab,
-.page__footer .far,
-.page__footer .fal {
-  color: #898c8f;
-}
-
 .page__footer-copyright {
+  height: 5em;
+  width: 100%;
+  line-height: 5em;
+  white-space: nowrap;
   font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
   font-size: 0.6875em;
-}
-
-.page__footer-follow ul {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-.page__footer-follow li {
-  display: inline-block;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
-  font-size: 0.75em;
-  text-transform: uppercase;
-}
-
-.page__footer-follow li + li::before {
-  content: "";
-  padding-right: 5px;
-}
-
-.page__footer-follow a {
-  padding-right: 10px;
-  font-weight: bold;
-}
-
-.page__footer-follow .social-icons a {
-  white-space: nowrap;
 }
 
 .layout--search .archive__item-teaser {
