--- a/_css/timothylin.css
+++ b/_css/timothylin.css
@@ -16,7 +16,7 @@ canvas {
     display: block;
     vertical-align: bottom;
 }
-#particles-js {
+#particles {
     position: absolute;
     width: 100%;
     height: 100%;
